--- a/src/config/config.json
+++ b/src/config/config.json
@@ -3,26 +3,26 @@
         [40.379535, -96.631756],
         [43.501391, -90.141582]
     ],
+    "basemap": "Streets",
     "layers": {
         "usng_10k": {
         	"dataLocation": "data/usng_10k.json",
         	"mapbookLocations": "https://ia.sharedgeo.net/maps/USNG_10K/",
         	"showLabels": true,
-        	"labelPropertyName": "GRID_10K"
+        	"labelPropertyName": "GRID_10K",
+            "color": "#4daf4a"
         },
         "usng_1k": {
         	"dataLocation": "data/usng_1k.json",
         	"mapbookLocations": "https://ia.sharedgeo.net/maps/USNG_mapbooks/",
         	"showLabels": true,
-        	"labelPropertyName": "GRID1MIL"
+        	"labelPropertyName": "GRID1MIL",
+            "color": "#377eb8"
         },
         "state": {
         	"showLabels": false,
-        	"dataLocation": "data/state.json"
-        },
-        "basemap": {
-        	"url": "http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png",
-        	"attribution": "&copy; <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a>"
-        }  	
+        	"dataLocation": "data/state.json",
+            "color": "#333333"
+        }
     }
 }
