--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "~0.5.0"
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-md2html": "^0.3.1"
   }
 }
